--- a/flask_appbuilder/templates/appbuilder/index.html
+++ b/flask_appbuilder/templates/appbuilder/index.html
@@ -1,11 +1,10 @@
 {% extends "appbuilder/base.html" %}
 
 {% block content %}
-<h2><center>{{_('Welcome')}}<center></h2>
+<h2><center>{{_('wie geil ist dass denn')}}<center></h2>
 
 <div class="well">
 
 </div>
 {% endblock %}
-
 
